objects/Comuna__c.object
<CustomObject>
    <description>Tabla de Comunas de Chile. Incluye Provincia, Región y códigos correspondientes.</description>
    <fields>
        <fullName>COD_CIUDAD__c</fullName>
        <description>Código de Ciudad o Provincia</description>
        <label>COD CIUDAD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_COMUNA__c</fullName>
        <externalId>true</externalId>
        <label>COD COMUNA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_PAIS__c</fullName>
        <formula>&quot;160&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COD PAIS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_REGION__c</fullName>
        <label>COD REGION</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLS_CIUDAD__c</fullName>
        <description>Glosa de la Ciudad o Provincia</description>
        <label>Ciudad o Provincia</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLS_REGIONLARGA__c</fullName>
        <label>Región</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <formula>&quot;Chile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>País</label>
        <type>Text</type>
    </fields>
    <label>Comuna</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GLS_CIUDAD__c</columns>
        <columns>GLS_REGIONLARGA__c</columns>
        <columns>Pais__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>COD_CIUDAD__c</columns>
        <columns>COD_COMUNA__c</columns>
        <columns>COD_PAIS__c</columns>
        <columns>COD_REGION__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Comuna</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comunas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>